--- a/app/src/main/res/layout/country_list_item.xml
+++ b/app/src/main/res/layout/country_list_item.xml
@@ -1,22 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_margin="8dp">
-
-    <TextView
-        android:id="@+id/itemName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Space
-        android:layout_margin="1dp"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="2dp" />
+        android:layout_height="100dp">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/itemImage"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/country_flag"
+            android:layout_weight="1"
+            android:padding="@dimen/image_padding" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:orientation="vertical"
+            android:padding="4dp"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/itemCountry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/ItemCapital"
+                android:text="@string/country" />
+
+            <TextView
+                android:id="@+id/itemCapital"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/ItemText"
+                android:text="@string/capital" />
+
+        </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
