--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,18 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.CatalinStefanAndroidCourse" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
+    <style name="ItemCapital">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="ItemText">
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="Theme.CatalinStefanAndroidCourse" parent="Base.Theme.CatalinStefanAndroidCourse" />
+
+
 </resources>
